envoy/example/xds.yaml
command:
  - /docker-entrypoint.sh
  - --config-path
  - /srv/runtime/current/envoy.yaml

rbac:
  create: true
  rules:
   - apiGroups: [""]
     resources: ["configmaps"]
     verbs: ["get", "list", "watch"]

initContainers:
  - name: xds-init
    image: mumoshu/envoy-xds-configmap-loader:canary-6090275
    command:
    - envoy-xds-configmap-loader
    args:
    - --apiserver
    - https://10.96.0.1:443
    - --configmap=envoy
    - --onetime
    - --insecure
    env:
    - name: POD_NAMESPACE
      valueFrom:
        fieldRef:
          fieldPath: metadata.namespace
    volumeMounts:
    - name: xds
      mountPath: /srv/runtime

extraContainers:
  - name: xds-update
    image: mumoshu/envoy-xds-configmap-loader:canary-6090275
    command:
    - envoy-xds-configmap-loader
    args:
    - --apiserver
    - https://10.96.0.1:443
    - --configmap=envoy
    - --sync-interval=5s
    - --insecure
    env:
    - name: POD_NAMESPACE
      valueFrom:
        fieldRef:
          fieldPath: metadata.namespace
    volumeMounts:
    - name: xds
      mountPath: /srv/runtime

extraVolumeMounts:
  - name: xds
    mountPath: /srv/runtime

extraVolumes:
  - name: xds
    emptyDir: {}

configmaps:
  lds.yaml: |
    resources:
      - "@type": type.googleapis.com/envoy.config.listener.v3.Listener
        name: listener_0
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 10000
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              access_log:
              - name: envoy.access_loggers.stdout
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
              http_filters:
              - name: envoy.filters.http.router
              route_config:
                name: local_route
                virtual_hosts:
                - name: local_service
                  domains: ["*"]
                  routes:
                  - match:
                      prefix: "/"
                    route:
                      host_rewrite_literal: www.envoyproxy.io
                      cluster: service_envoyproxy_io
  cds.yaml: |
    resources:
      - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
        name: service_envoyproxy_io
        type: LOGICAL_DNS
        # Comment out the following line to test on v6 networks
        dns_lookup_family: V4_ONLY
        load_assignment:
          cluster_name: service_envoyproxy_io
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: www.envoyproxy.io
                    port_value: 443
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
            sni: www.envoyproxy.io
  envoy.yaml: |
    node:
      id: foo
      cluster: xds_example

    dynamic_resources:
      lds_config:
        path: "/srv/runtime/current/lds.yaml"
      cds_config:
        path: "/srv/runtime/current/cds.yaml"

    admin:
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
